--- a/test_ansible/roles/samba/docker-compose.yml
+++ b/test_ansible/roles/samba/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ad:
     build:
       context: .  # Le dossier avec le Dockerfile
-    container_name: samba
+    container_name: ad
     environment:
       TZ: "Europe/Paris"
     networks:
