--- a/test_ansible/roles/samba/ansible.cfg
+++ b/test_ansible/roles/samba/ansible.cfg
@@ -2,3 +2,5 @@
 inventory = inventory.ini
 host_key_checking = False
 remote_user = root
+roles_path = ./roles:/root/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+
