--- a/test_ansible/roles/samba/tasks/main.yml
+++ b/test_ansible/roles/samba/tasks/main.yml
@@ -52,6 +52,12 @@
     line: 'include "/etc/bind/named.conf.samba";'
   notify: Redémarrer Bind9
 
+- name: Configurer le fichier de résolution DNS (resolv.conf)
+  lineinfile:
+    path: /etc/resolv.conf
+    regexp: '^nameserver'
+    line: 'nameserver 192.168.0.2'
+
 - name: Ajouter la zone DNS principale pour le domaine
   blockinfile:
     path: /etc/bind/named.conf.local
