--- a/test_ansible/roles/samba/tasks/main.yml
+++ b/test_ansible/roles/samba/tasks/main.yml
@@ -12,6 +12,8 @@
       - bind9utils
       - dnsutils
     state: present
+  update_cache: yes
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Configurer le fichier krb5.conf
   template:
@@ -31,51 +33,8 @@
   args:
     creates: /etc/samba/smb.conf
 
-- name: Vérifier que Samba est bien configuré
-  command: testparm -s
-  register: samba_test_output
-
-- name: Afficher le résultat de la vérification Samba
-  debug:
-    var: samba_test_output.stdout
-
-- name: Configurer Bind9 pour Samba
-  copy:
-    src: /var/lib/samba/private/named.conf
-    dest: /etc/bind/named.conf.samba
-    remote_src: yes
-
-- name: Inclure la configuration Samba dans Bind9
-  lineinfile:
-    path: /etc/bind/named.conf
-    insertafter: EOF
-    line: 'include "/etc/bind/named.conf.samba";'
-  notify: Redémarrer Bind9
-
-- name: Configurer le fichier de résolution DNS (resolv.conf)
-  lineinfile:
-    path: /etc/resolv.conf
-    regexp: '^nameserver'
-    line: 'nameserver 192.168.0.2'
-
-- name: Ajouter la zone DNS principale pour le domaine
-  blockinfile:
-    path: /etc/bind/named.conf.local
-    create: yes
-    block: |
-      zone "{{ domain|lower }}" {
-          type master;
-          file "/var/lib/samba/private/dns/{{ domain|lower }}.zone";
-      };
-
 - name: Démarrer Samba
   service:
     name: samba
     state: started
-    enabled: yes
-
-- name: Démarrer Bind9
-  service:
-    name: bind9
-    state: restarted
     enabled: yes
