--- a/test_ansible/roles/samba/playbook.yml
+++ b/test_ansible/roles/samba/playbook.yml
@@ -1,5 +1,43 @@
----
-- name: Configurer Samba en tant qu'Active Directory
+- name: Déployer Samba AD avec Docker et Ansible
+  hosts: docker_host
+  become: true
+  tasks:
+    - name: Installer Docker et Docker Compose si nécessaire
+      apt:
+        name:
+          - docker.io
+          - docker-compose
+        state: present
+        update_cache: yes
+
+    - name: Créer le répertoire de destination pour Samba
+      file:
+        path: /root/test_ansible/roles/samba
+        state: directory
+        mode: '0755'
+
+    - name: Copier le fichier docker-compose.yml pour Samba
+      copy:
+        src: docker-compose.yml
+        dest: "{{ lookup('env', 'HOME') }}/test_ansible/roles/samba/docker-compose.yml"
+
+    - name: Copier le fichier Dockerfile pour Samba
+      copy:
+        src: Dockerfile
+        dest: "{{ lookup('env', 'HOME') }}/test_ansible/roles/samba/Dockerfile"
+
+    - name: Attendre que le conteneur Samba soit prêt (pour SSH)
+      wait_for:
+        host: 192.168.0.3
+        port: 22
+        state: started
+        delay: 10
+        timeout: 30
+
+- name: Configurer Samba dans le conteneur
   hosts: ad
-  roles:
-    - samba
+  become: true
+  vars_files:
+    - roles/samba/vars/main.yml
+  tasks:
+    - include_tasks: tasks/main.yml
