--- a/test_ansible/inventaire.ini
+++ b/test_ansible/inventaire.ini
@@ -5,4 +5,5 @@
 192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
 [ad]
-192.168.0.3 ansible_user=root ansible_ssh_pass=root
+192.168.0.3 ansible_user=root ansible_ssh_pass=root ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
