--- a/test_ansible/roles/samba/playbook.yml
+++ b/test_ansible/roles/samba/playbook.yml
@@ -5,8 +5,8 @@
     - name: Installer Docker et Docker Compose si nécessaire
       apt:
         name:
-          - docker.io
-          - docker-compose
+          #- docker.io
+          #- docker-compose
         state: present
         update_cache: yes
 
