--- a/test_fusion/bind/named.conf
+++ b/test_fusion/bind/named.conf
@@ -1,19 +1,12 @@
 options {
-    directory "/var/cache/bind";
+    directory "/var/lib/bind";
     allow-query { any; };
-    recursion yes;
-
-    forwarders {
-        8.8.8.8; 8.8.4.4;
-    };
+    allow-recursion { any; };
+    forwarders { 8.8.8.8; 8.8.4.4; };
+    dnssec-validation auto;
 };
 
 zone "example.com" {
     type master;
     file "/var/lib/bind/example.com.db";
-};
-
-zone "." {
-    type hint;
-    file "/usr/share/dns/root.hints";
 };
