--- a/test_fusion/samba/smb.conf
+++ b/test_fusion/samba/smb.conf
@@ -1,14 +1,16 @@
 [global]
-    workgroup = EXAMPLE
-    realm = EXAMPLE.COM
+    workgroup = SAMDOM
+    realm = SAMDOM.EXAMPLE.COM
     netbios name = AD
     server role = active directory domain controller
-    dns forwarder = 192.168.0.2
+    dns forwarder = 127.0.0.1
+    interfaces = eth0 lo
+    bind interfaces only = yes
 
 [sysvol]
     path = /var/lib/samba/sysvol
     read only = No
 
 [netlogon]
-    path = /var/lib/samba/sysvol/example.com/scripts
+    path = /var/lib/samba/sysvol/samdom.example.com/scripts
     read only = No
