--- a/test_fusion/docker-compose.yml
+++ b/test_fusion/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     build:
       context: .
       dockerfile: dockerfile
-    container_name: dns/ad
+    container_name: dns_ad
     ports:
-      - "2222:22"         # SSH
-      - "53:53/udp"     # DNS (Bind9)
+      - "2222:22"        # SSH
+      - "53:53/udp"      # DNS (Bind9)
       - "53:53/tcp"
-      - "445:445"       # Samba
+      - "445:445"        # Samba
       - "139:139"
-      - "389:389"       # LDAP pour Samba
+      - "389:389"        # LDAP pour Samba
     networks:
       shared_net:
         ipv4_address: 192.168.0.2
