--- a/test_fusion/dockerfile
+++ b/test_fusion/dockerfile
@@ -1,15 +1,21 @@
 FROM ubuntu:20.04
 
-# Met à jour le système et installe OpenSSH Server
-RUN apt-get update && apt-get install -y openssh-server && \
+# Installe uniquement les dépendances de base et SSH
+RUN apt-get update && apt-get install -y \
+    openssh-server \
+    python3 \
+    python3-pip && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
     sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config
 
-# Expose les ports
-EXPOSE 53/udp 53/tcp 22
+# Installer Ansible pour exécuter des tâches à l'intérieur du conteneur (si nécessaire)
+RUN pip3 install ansible
+
+# Expose les ports nécessaires
+EXPOSE 53/udp 53/tcp 22 139 445 389
 
 # Commande de démarrage
-CMD service ssh start && /usr/sbin/named -f
+CMD service ssh start && tail -f /dev/null
