--- a/test_fusion/inventaire.ini
+++ b/test_fusion/inventaire.ini
@@ -1,2 +1,2 @@
-[dns/ad]
-127.0.0.1 ansible_connection=ssh ansible_user=root ansible_password=root ansible_port=22
+[fusion]
+192.168.0.2 ansible_user=root ansible_ssh_pass=root ansible_ssh_port=2222 ansible_connection=ssh
