--- a/test_fusion/docker-compose.yml
+++ b/test_fusion/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "445:445"        # Samba
       - "139:139"
       - "389:389"        # LDAP pour Samba
+    environment:
+      TZ: "Europe/Paris"
     networks:
       shared_net:
         ipv4_address: 192.168.0.2
