--- a/test_fusion/dockerfile
+++ b/test_fusion/dockerfile
@@ -1,17 +1,20 @@
 FROM ubuntu:20.04
 
-# Installe uniquement les dépendances de base et SSH
+# Met à jour les paquets et installe openssh-server
 RUN apt-get update && apt-get install -y \
     openssh-server \
+    tzdata \
     python3 \
     python3-pip && \
+    echo "Etc/UTC" > /etc/timezone && \
+    dpkg-reconfigure --frontend noninteractive tzdata && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
     sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config
 
-# Installer Ansible pour exécuter des tâches à l'intérieur du conteneur (si nécessaire)
+# Installe Ansible
 RUN pip3 install ansible
 
 # Expose les ports nécessaires
