--- a/test_fusion/dockerfile
+++ b/test_fusion/dockerfile
@@ -3,8 +3,11 @@ FROM ubuntu:20.04
 # Met à jour les paquets et installe openssh-server
 RUN apt-get update && apt-get install -y \
     openssh-server \
+    tzdata \
     python3 \
     python3-pip && \
+    echo "Etc/UTC" > /etc/timezone && \
+    dpkg-reconfigure --frontend noninteractive tzdata && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
