--- a/test_fusion/dockerfile
+++ b/test_fusion/dockerfile
@@ -1,18 +1,23 @@
 FROM ubuntu:20.04
 
-# Met à jour les paquets et installe openssh-server
-RUN apt-get update && apt-get install -y \
+# Met à jour les paquets et installe les dépendances nécessaires
+RUN apt-get update && apt-get install -y --no-install-recommends \
     openssh-server \
-    tzdata \
+    bind9 \
+    samba \
     python3 \
-    python3-pip && \
-    echo "Etc/UTC" > /etc/timezone && \
-    dpkg-reconfigure --frontend noninteractive tzdata && \
+    python3-pip \
+    tzdata && \
+    echo "Europe/Paris" > /etc/timezone && \
+    ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime && \
+    dpkg-reconfigure -f noninteractive tzdata && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
-    sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config
+    sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Installe Ansible
 RUN pip3 install ansible
