--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -33,11 +33,8 @@
         dest: /etc/samba/smb.conf
 
     - name: "activation Bind9"
-      service:
-        name: "named"
-        state: "restarted"
-        enabled: true
-        use: "service"
+      ansible.builtin.command:
+      cmd: service named start
 
     - name: "activation samba"
       service:
