--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -32,15 +32,15 @@
         src: ./samba/smb.conf
         dest: /etc/samba/smb.conf
 
-    - name: "Démarrage du service Bind9 avec service"
-      shell: "service named start"
-      become: true
+    # - name: "Démarrage du service Bind9 avec service"
+    #   shell: "service named start"
+    #   become: true
 
 
-    - name: "activation samba"
-      service:
-        name: "smbd"
-        state: "started"
-        enabled: true
-        use: "service"
+    # - name: "activation samba"
+    #   service:
+    #     name: "smbd"
+    #     state: "started"
+    #     enabled: true
+    #     use: "service"
   
