--- a/test_fusion/bind/named.conf
+++ b/test_fusion/bind/named.conf
@@ -8,5 +8,6 @@ options {
 
 zone "example.com" {
     type master;
-    file "/var/lib/bind/example.com.db";
+    file "/etc/bind/zones/example.com.db";
 };
+
