--- a/test_fusion/bind/named.conf
+++ b/test_fusion/bind/named.conf
@@ -1,13 +1,2 @@
-options {
-    directory "/var/lib/bind";
-    allow-query { any; };
-    allow-recursion { any; };
-    forwarders { 8.8.8.8; 8.8.4.4; };
-    dnssec-validation auto;
-};
-
-zone "example.com" {
-    type master;
-    file "/etc/bind/zones/example.com.db";
-};
-
+include "/etc/bind/named.conf.options";
+include "/etc/bind/named.conf.local";
