--- a/test_fusion/docker-compose.yml
+++ b/test_fusion/docker-compose.yml
@@ -20,9 +20,10 @@ services:
       shared_net:
         ipv4_address: 192.168.0.2
     volumes:
-      - ./bind:/etc/bind
-      - ./bind/zones:/var/lib/bind
-      - ./bind/cache:/var/cache/bind
+      - ./named.conf:/etc/bind/named.conf
+      - ./named.conf.local:/etc/bind/named.conf.local
+      - ./named.conf.options:/etc/bind/named.conf.options
+      - ./zones:/etc/bind/zones
       - ./samba:/etc/samba
     privileged: true
 
