--- a/test_fusion/bind/named.conf
+++ b/test_fusion/bind/named.conf
@@ -1,3 +1,42 @@
-# include "/etc/bind/named.conf.options";
+// Fichier principal de configuration de BIND9
+include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
-# include "/etc/bind/named.conf.default-zones";
+
+// Prime the server with knowledge of the root servers
+zone "." {
+    type hint;
+    file "/etc/bind/db.root";
+};
+
+// Zones par défaut pour localhost
+zone "localhost" {
+    type master;
+    file "/etc/bind/db.local";
+};
+
+zone "127.in-addr.arpa" {
+    type master;
+    file "/etc/bind/db.127";
+};
+
+zone "0.in-addr.arpa" {
+    type master;
+    file "/etc/bind/db.0";
+};
+
+zone "255.in-addr.arpa" {
+    type master;
+    file "/etc/bind/db.255";
+};
+
+// Zone pour le domaine "mondomaine.com"
+zone "mondomaine.com" {
+    type master;
+    file "/etc/bind/zones/mondomaine.com.hosts";
+};
+
+// Zone inversée pour le LAN (192.168.1.x)
+zone "1.168.192.in-addr.arpa" {
+    type master;
+    file "/etc/bind/zones/rev.192.168.1.in-addr.arpa";
+};
