--- a/test_fusion/samba/smb.conf
+++ b/test_fusion/samba/smb.conf
@@ -3,9 +3,23 @@
     realm = SAMDOM.EXAMPLE.COM
     netbios name = AD
     server role = active directory domain controller
-    dns forwarder = 127.0.0.1
-    interfaces = eth0 lo
+
+    # Configuration DNS
+    dns forwarder = 8.8.8.8  # Utilisez un DNS public ou celui de votre FAI
+    allow dns updates = secure  # Permet aux machines jointes de mettre à jour le DNS
+
+    # Réseau
+    interfaces = eth0 lo  # Adaptez à votre interface réseau
     bind interfaces only = yes
+
+    # Protocoles SMB pour compatibilité moderne
+    server min protocol = SMB2
+    server max protocol = SMB3
+
+    # Journaux pour dépannage
+    log level = 3
+    log file = /var/log/samba/samba.log
+    max log size = 1000
 
 [sysvol]
     path = /var/lib/samba/sysvol
