--- a/test_fusion/samba/smb.conf
+++ b/test_fusion/samba/smb.conf
@@ -3,9 +3,10 @@
     realm = SAMDOM.EXAMPLE.COM
     netbios name = AD
     server role = active directory domain controller
-
+    
     # Configuration DNS
     dns forwarder = 8.8.8.8  # Utilisez un DNS public ou celui de votre FAI
+    server services = -dns
     allow dns updates = secure  # Permet aux machines jointes de mettre à jour le DNS
 
     # Réseau
